Made ValueParser and BaseValueParser locale-aware. Note that the default locale used is always the default value of the JVM which is different from the previous behaviour where the locale used was sometimes Locale.US (for float, double and BigDecimal) and sometimes the JVM-default (for dates).
TODO: Integration into RunData

git-svn-id: https://svn.apache.org/repos/asf/turbine/core/branches/TURBINE_2_3_BRANCH@639770 13f79535-47bb-0310-9956-ffa450edef68